<resources>
    <string name="app_name">Home Heating</string>
    <string name="tab_text_1">Heating</string>
    <string name="tab_text_2">Water</string>
    <string name="soon">Coming Soon!</string>
    <string name="status">STATUS</string>
    <string name="hoff">Heating OFF</string>
    <string name="hon">Heating ON</string>
    <string name="woff">Water OFF</string>
    <string name="won">Water ON</string>
    <string name="relswitcher">Home Heating</string>
    <string name="test_values_h_w"><![CDATA[Heating: Unknown & Water: Unknown]]></string>
    <string name="hON_wON"><![CDATA[Heating: ON & Water: ON]]></string>
    <string name="hON_wOFF"><![CDATA[Heating: ON & Water: OFF]]></string>
    <string name="hOFF_wON"><![CDATA[Heating: OFF & Water: ON]]></string>
    <string name="hOFF_wOFF"><![CDATA[Heating:OFF & Water: OFF]]></string>
    <string name="title_activity_settings">Devices</string>
    <string name="home">Home</string>
    <string name="_07xxx_xxxxxx">07xxxxxxxxx</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="ip">IP:</string>
    <string name="temperature">"Temperature: "</string>


</resources>
