<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:screenOrientation="portrait">

    <Spinner
        android:id="@+id/devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
    <Button
        android:id="@+id/Won"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:text="@string/won"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Woff"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Won"
        android:layout_marginTop="15dp"
        android:text="@string/woff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Wstatus"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Woff"
        android:layout_marginTop="15dp"
        android:text="@string/status"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/texts1"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:fontFamily="monospace"
        android:text="@string/test_values_h_w"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Large" />


</RelativeLayout>